# lazycode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
bench/: README.md  compare.py  pricing.py  run_baseline.py  run_lazycode.py  task_spec.py
docs/: DESIGN.md
lazycode/cli/: app.py  client.py  config.py  daemon.py  mock_provider.py  render_plan.py
lazycode/harvest/: __init__.py  harvester.py  repo_map.py
lazycode/ir/: __init__.py  calls.py  context_spec.py  contracts.py  events.py  operators.py  physical.py
lazycode/notify/: __init__.py  log.py
lazycode/optimizer/: __init__.py  physical.py  rules.py
lazycode/planner/: __init__.py  planner.py  prompts.py
lazycode/providers/: anthropic_batch.py  base.py  mock.py  realtime.py
lazycode/scheduler/: __init__.py  config.py  orchestrator.py  payloads.py  render.py  report.py  resume.py
lazycode/store/: __init__.py  cas.py  db.py  eventlog.py  lease.py  ledger.py  memo.py  projections.py  stats.py
lazycode/verify/: __init__.py  runner.py
lazycode/workspace/: __init__.py  apply.py  manager.py
site/: index.html
tests/bench/: test_compare.py  test_pricing.py  test_run_baseline.py  test_run_lazycode.py  test_task_spec.py
tests/cli/: conftest.py  test_config.py  test_daemon.py  test_render_plan.py  test_run_e2e.py
tests/e2e/: _harness.py  conftest.py  test_crash_resume.py  test_happy_path.py
tests/ir/: test_calls.py  test_contracts_context.py  test_events_physical.py  test_operators.py
tests/local/: conftest.py  test_harvester.py  test_repo_map.py  test_verify_runner.py  (+2 more)
(+29 files in other folders)
