[project]
name = "lazycode"
version = "0.0.1"
description = "Batch-API-native coding agent: plan realtime, execute on 24h-SLA batch APIs, optimize like a query engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.34",
    "httpx>=0.27",
]

[project.scripts]
lazycode = "lazycode.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lazycode"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: real subprocess end-to-end tests (spawn `lazycode` as a child process); slow, opt-in via -m e2e",
]
addopts = "-m \"not e2e\""
